--- a/public/index.html
+++ b/public/index.html
@@ -39,15 +39,15 @@
           suggestions: "Personas que quizás conozcas",
           contacts: "Contactos",
           language: "Idioma",
-          error: "Error al cargar {endpoint}: {message}. Por favor, intenta de nuevo o recarga la página.",
+          error: "Error al cargar {endpoint}: {message}.",
           retry: "Reintentar"
         },
-        wayuunaiki: { home: "Jepirra", news: "Waneepia", social: "Waya", profile: "Aipirua", oneXten: "1x10", error: "Alainnapa {endpoint}: {message}. Jale jujuya.", retry: "Jujuya" },
-        pemon: { home: "Panton", news: "Yekuana", social: "Kumana", profile: "Enek", oneXten: "1x10", error: "Pawana {endpoint}: {message}. Wökö puyö.", retry: "Puyö" },
-        en: { home: "Home", news: "Official News", social: "Social Network", profile: "Profile", oneXten: "1x10", error: "Error loading {endpoint}: {message}. Please try again or reload.", retry: "Retry" },
-        ru: { home: "Главная", news: "Официальные новости", social: "Социальная сеть", profile: "Профиль", oneXten: "1x10", error: "Ошибка загрузки {endpoint}: {message}. Перезагрузите.", retry: "Повторить" },
-        ar: { home: "الرئيسية", news: "الأخبار الرسمية", social: "الشبكة الاجتماعية", profile: "الملف الشخصي", oneXten: "1x10", error: "خطأ في تحميل {endpoint}: {message}. أعد التحميل.", retry: "إعادة المحاولة" },
-        zh: { home: "首页", news: "官方新闻", social: "社交网络", profile: "个人资料", oneXten: "1x10", error: "加载{endpoint}错误：{message}。请刷新。", retry: "重试" }
+        wayuunaiki: { home: "Jepirra", news: "Waneepia", social: "Waya", profile: "Aipirua", oneXten: "1x10", error: "Alainnapa {endpoint}: {message}.", retry: "Jujuya" },
+        pemon: { home: "Panton", news: "Yekuana", social: "Kumana", profile: "Enek", oneXten: "1x10", error: "Pawana {endpoint}: {message}.", retry: "Puyö" },
+        en: { home: "Home", news: "Official News", social: "Social Network", profile: "Profile", oneXten: "1x10", error: "Error loading {endpoint}: {message}.", retry: "Retry" },
+        ru: { home: "Главная", news: "Официальные новости", social: "Социальная сеть", profile: "Профиль", oneXten: "1x10", error: "Ошибка загрузки {endpoint}: {message}.", retry: "Повторить" },
+        ar: { home: "الرئيسية", news: "الأخبار الرسمية", social: "الشبكة الاجتماعية", profile: "الملف الشخصي", oneXten: "1x10", error: "خطأ في تحميل {endpoint}: {message}.", retry: "إعادة المحاولة" },
+        zh: { home: "首页", news: "官方新闻", social: "社交网络", profile: "个人资料", oneXten: "1x10", error: "加载{endpoint}错误：{message}。", retry: "重试" }
       };
 
       // 1x10 Component
@@ -126,28 +126,38 @@
         const [news, setNews] = React.useState([]);
         const [showMessagePopup, setShowMessagePopup] = React.useState(false);
         const [showBirthdayPopup, setShowBirthdayPopup] = React.useState(false);
-        const [error, setError] = React.useState(null);
+        const [errors, setErrors] = React.useState([]);
         const [currentSection, setCurrentSection] = React.useState("home");
 
         // Fetch news
         const fetchNews = () => {
-          setError(null);
           axios.get("/api/news")
-            .then((res) => setNews(Array.isArray(res.data) ? res.data : []))
+            .then((res) => {
+              setNews(Array.isArray(res.data) ? res.data : []);
+              setErrors((prev) => prev.filter((err) => !err.includes("/api/news")));
+            })
             .catch((err) => {
               console.error("Error fetching news:", err.message);
-              setError(t.error.replace("{endpoint}", "/api/news").replace("{message}", err.message));
+              setErrors((prev) => [
+                ...prev.filter((err) => !err.includes("/api/news")),
+                t.error.replace("{endpoint}", "/api/news").replace("{message}", err.message)
+              ]);
             });
         };
 
         // Fetch posts
         const fetchPosts = () => {
-          setError(null);
           axios.get("/api/posts")
-            .then((res) => setPosts(Array.isArray(res.data) ? res.data : []))
+            .then((res) => {
+              setPosts(Array.isArray(res.data) ? res.data : []);
+              setErrors((prev) => prev.filter((err) => !err.includes("/api/posts")));
+            })
             .catch((err) => {
               console.error("Error fetching posts:", err.message);
-              setError(t.error.replace("{endpoint}", "/api/posts").replace("{message}", err.message));
+              setErrors((prev) => [
+                ...prev.filter((err) => !err.includes("/api/posts")),
+                t.error.replace("{endpoint}", "/api/posts").replace("{message}", err.message)
+              ]);
             });
         };
 
@@ -159,16 +169,18 @@
         const t = translations[language] || translations.es;
 
         // Error fallback
-        if (error) {
+        if (errors.length > 0) {
           return (
             <div className="p-4 text-[#2a2a2a]">
               <h2>Error</h2>
-              <p>{error}</p>
+              {errors.map((error, index) => (
+                <p key={index}>{error}</p>
+              ))}
               <button
                 className="bg-[#e11a1d] text-white p-2 rounded mt-2"
                 onClick={() => {
-                  if (error.includes("/api/news")) fetchNews();
-                  if (error.includes("/api/posts")) fetchPosts();
+                  if (errors.some((err) => err.includes("/api/news"))) fetchNews();
+                  if (errors.some((err) => err.includes("/api/posts"))) fetchPosts();
                 }}
               >
                 {t.retry}
